refactor whole project: - remove aspects, use event listeners instead - use validation in dto - use postgres instead of microsoft sql server - add more feature packages - delete open library client